PN-21406 fix: handled version retrieval